version: "0.0.3+dune"
opam-version: "2.0"
name: "brr"
synopsis: """Browser programming toolkit for OCaml"""
maintainer: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
authors: ["The brr programmers"]
homepage: "https://github.com/dune-universe/brr.git"
dev-repo: "git+https://github.com/dune-universe/brr"
bug-reports: "https://github.com/dbuenzli/brr/issues"
license: ["ISC" "BSD-3-Clause"]
tags: ["reactive" "declarative" "frp" "front-end" "browser" "org:erratique"]
depends: ["ocaml" {>= "4.08.0"}
          "dune"
	  "dune-site"
          "js_of_ocaml-compiler" {>= "4.0.0"}
          "js_of_ocaml-toplevel" {>= "4.0.0"}
          "note"]
build: [ "dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} ]
description: """
Brr is a toolkit for programming browsers in OCaml with the
[`js_of_ocaml`][jsoo] compiler. It provides:

* Interfaces to a selection of browser APIs.
* Note based reactive support (optional and experimental).
* An OCaml console developer tool for live interaction 
  with programs running in web pages.
* A JavaScript FFI for idiomatic OCaml programming.

Brr is distributed under the ISC license. It depends on [Note][note]
and on the `js_of_ocaml` compiler and runtime – but not on its
libraries or syntax extension.

[note]: https://erratique.ch/software/note
[jsoo]: https://ocsigen.org/js_of_ocaml

Homepage: https://erratique.ch/software/brr"""