version: "15.0.0+dune"
opam-version: "2.0"
name: "uucp"
synopsis: "Unicode character properties for OCaml"
description: """\
Uucp is an OCaml library providing efficient access to a selection of
character properties of the [Unicode character database][1].

Uucp is independent from any Unicode text data structure and has no
dependencies. It is distributed under the ISC license.

[1]: http://www.unicode.org/reports/tr44/

Home page: http://erratique.ch/software/uucp"""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The uucp programmers"
license: "ISC"
tags: ["unicode" "text" "character" "org:erratique"]
homepage: "https://github.com/dune-universe/uucp"
bug-reports: "https://github.com/dbuenzli/uucp/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.1"}
]
conflicts: [
  "uutf" {< "1.0.1"}
  "cmdliner" {< "1.1.0"}
]
build: [ "dune" "build" "-p" name "-j" jobs ]
dev-repo: "git+https://github.com/dune-universe/uucp.git"
url {
  src: "git://github.com/dune-universe/uucp.git#duniverse-v15.0.0"
}